--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
         rel="stylesheet">
 </head>
 
-<body>
-    <section class="main-bg section">
-        <div class="main-content">
-            <h1>Teste</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, officia! Illum, neque impedit? Pariatur
-                corrupti tempora delectus cum, quis eius iste impedit non eos est dolore doloribus incidunt
-                reprehenderit. Quaerat!</p>
-        </div>
+<body class="main-bg">
+    <aside class="menu">
+        <section class="main-content menu-content">
+            <h1><a href="#">Logo</a></h1>
+            <nav>
+                <ul>
+                    <li><a href='#'>intro</a></li>
+                    <li><a href='#'>top 3</a></li>
+                    <li><a href='#'>gallery</a></li>
+                    <li><a href='#'>work</a></li>
+                    <li><a href='#'>contact</a></li>
+                </ul>
+            </nav>
+        </section>
+    </aside>
+    <section class="section white-bg">
     </section>
-    <section class="white-bg section">
-        <div class="main-content">
-            <h1>Teste</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, officia! Illum, neque impedit? Pariatur
-                corrupti tempora delectus cum, quis eius iste impedit non eos est dolore doloribus incidunt
-                reprehenderit. Quaerat!</p>
-        </div>
+    <section class="section">
     </section>
 </body>
 
