--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="/assets/css/elements.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +16,8 @@
 </head>
 
 <body class="main-bg">
-    <aside class="menu">
-        <section class="main-content menu-content">
+    <aside class="menu white-bg">
+        <div class="main-content menu-content">
             <h1><a href="#">Logo</a></h1>
             <nav>
                 <ul>
@@ -27,11 +28,30 @@
                     <li><a href='#'>contact</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
     </aside>
-    <section class="section white-bg">
+
+    <div class="menu-spacing"></div>
+
+    <section class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text">
+                <h2>January brings us Firefox 85</h2>
+                <p>
+                    To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are
+                    bringing you
+                    support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal
+                    of Flash
+                    support from Firefox.
+                </p>
+            </div>
+            <div class="intro-img"><img src="assets/img/javascript-not-optimaize.svg" alt="Logo de HTML, CSS e JS.">
+            </div>
+        </div>
     </section>
-    <section class="section">
+
+    <section class="white-bg section">
+        <h2></h2>
     </section>
 </body>
 
