--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 <body class="main-bg">
     <aside class="menu white-bg">
         <div class="main-content menu-content">
-            <h1><a href="#">Logo</a></h1>
+            <h1><a href="#home">Logo</a></h1>
             <nav>
                 <ul>
                     <li><a href='#intro'>intro</a></li>
-                    <li><a href='#top3'>top 3</a></li>
-                    <li><a href='#'>gallery</a></li>
-                    <li><a href='#'>work</a></li>
+                    <li><a href='#grid-one'>my grid</a></li>
+                    <li><a href='#gallery'>gallery</a></li>
                     <li><a href='#'>contact</a></li>
                 </ul>
             </nav>
@@ -33,7 +32,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section id="intro" class="intro main-bg section">
+    <section id="home" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text">
                 <h2>January brings us Firefox 85</h2>
@@ -50,7 +49,7 @@
         </div>
     </section>
 
-    <section id="top3" class="white-bg section">
+    <section id="intro" class="white-bg section">
         <div class="main-content top3-content">
             <h2>Top 3 jobs</h2>
             <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
@@ -65,6 +64,47 @@
                 and
                 discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of
                 various other improvements that are in the pipeline.</p>
+        </div>
+    </section>
+
+    <section id="grid-one" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">My Grid</h2>
+            <p class="grid-description">uma breve descrição</p>
+            <div class="grid">
+                <article>
+                    <h3>teste 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit reprehenderit placeat
+                        illo
+                        quis
+                        expedita ipsa maiores magnam molestias obcaecati delectus temporibus, nihil amet, odit numquam
+                        sequi
+                        enim harum cum.</p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit reprehenderit placeat
+                        illo
+                        quis
+                        expedita ipsa maiores magnam molestias obcaecati delectus temporibus, nihil amet, odit numquam
+                        sequi
+                        enim harum cum.</p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit reprehenderit placeat
+                        illo
+                        quis
+                        expedita ipsa maiores magnam molestias obcaecati delectus temporibus, nihil amet, odit numquam
+                        sequi
+                        enim harum cum.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="gallery" class="section white-bg">
+        <div class="main-content">
+            <h1>teste</h1>
         </div>
     </section>
 </body>
