Adição das paginas de galeria e contato

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
 </head>
 
-<body class="main-bg">
+<body>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1><a href="#home">Logo</a></h1>
@@ -24,7 +24,7 @@
                     <li><a href='#intro'>intro</a></li>
                     <li><a href='#grid-one'>my grid</a></li>
                     <li><a href='#gallery'>gallery</a></li>
-                    <li><a href='#'>contact</a></li>
+                    <li><a href='#contact'>contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -102,11 +102,174 @@
             </div>
         </div>
     </section>
-    <section id="gallery" class="section white-bg">
-        <div class="main-content">
-            <h1>teste</h1>
+    <section id="gallery" class="grid-one white-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">uma breve descrição</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?1" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?2" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?3" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?4" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?5" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?6" alt="">
+                </div>
+            </div>
         </div>
     </section>
+    <section id="grid-two" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">My Grid</h2>
+            <p class="grid-description">uma breve descrição</p>
+            <div class="grid">
+                <article>
+                    <h3>teste 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit reprehenderit placeat
+                        illo
+                        quis
+                        expedita ipsa maiores magnam molestias obcaecati delectus temporibus, nihil amet, odit numquam
+                        sequi
+                        enim harum cum.</p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit reprehenderit placeat
+                        illo
+                        quis
+                        expedita ipsa maiores magnam molestias obcaecati delectus temporibus, nihil amet, odit numquam
+                        sequi
+                        enim harum cum.</p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit reprehenderit placeat
+                        illo
+                        quis
+                        expedita ipsa maiores magnam molestias obcaecati delectus temporibus, nihil amet, odit numquam
+                        sequi
+                        enim harum cum.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="intro" class="white-bg section">
+        <div class="main-content top3-content">
+            <h2>Pricing Table</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet nihil porro quasi natus magni
+                voluptate iure sapiente deleniti quod beatae, aperiam maiores corrupti recusandae, doloribus
+                reprehenderit dolorem. Enim, corporis.</p>
+            <div class="responsive-table">
+                <table>
+                    <caption>Princing table</caption>
+                    <thead>
+                        <tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                            <th>Title 3</th>
+                            <th>Title 4</th>
+                            <th>Title 5</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>teste</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text">
+                <h2>Contact us</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsum veniam facere, explicabo
+                    possimus tenetur molestias voluptatum excepturi autem architecto inventore sapiente repellendus
+                    similique iusto consequatur ullam voluptatem saepe odio.
+                </p>
+            </div>
+            <div class="intro-img"><img src="assets/img/javascript-not-optimaize.svg" alt="Logo de HTML, CSS e JS.">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Contact me</legend>
+                    <div class="form-group">
+                        <label for="first-name">First name</label>
+                        <input type="text" name="first-name" id="first-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last name</label>
+                        <input type="text" name="last-name" id="last-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="massage">Massage</label>
+                        <textarea name="message" id="massage"></textarea>
+                    </div>
+                    <div class="form-group full-width">
+                        <button type="submit">Send message</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+        </div>
+    </section>
+    <footer id="footer" class="footer white-bg">
+        <p>
+            Feito por Pablo Yohan
+        </p>
+    </footer>
 </body>
 
 </html>
