--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 </head>
 
 <body>
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="Close menu" role="button">
+    <label class="close-menu-label" for="close-menu" title="close menu"></label>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1><a href="#home">Logo</a></h1>
             <nav>
-                <ul>
+                <ul onclick="getElementById('close-menu').checked = false;">
                     <li><a href='#intro'>intro</a></li>
                     <li><a href='#grid-one'>my grid</a></li>
                     <li><a href='#gallery'>gallery</a></li>
